--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -115,7 +115,7 @@
             ]
         },
         {
-            "name": "Debug JSFiddles",
+            "name": "Debug playgroundss",
             "request": "launch",
             "type": "msedge",
             "file": "${workspaceFolder}/index.html",
